--- a/01 HibColl Notepads/HibColl Session 03 Logic.tex
+++ b/01 HibColl Notepads/HibColl Session 03 Logic.tex
@@ -5,7 +5,7 @@
 \begin{document}
 
 %--------------------------------------%
-
+\large
 \section{Logic Proposition}
 Let $p$, $Q$ and $r$ be the following propositions concerning integers $n$:
 
@@ -15,7 +15,8 @@ Let $p$, $Q$ and $r$ be the following propositions concerning integers $n$:
 \item $r$ : n is a factor of 9 (3)
 \end{itemize}
 
-
+{
+\Large
 \begin{center}
 \begin{tabular}{|c||c|c|c|}
 \hline 
@@ -32,6 +33,7 @@ Let $p$, $Q$ and $r$ be the following propositions concerning integers $n$:
 \hline 
 \end{tabular} 
 \end{center}
+}
 For each of the following compound statements, express it using the propositions P q and r, andng logical symbols, then given the truth table for it,
 
 \begin{itemize}
