--- a/MASTER01-Numbers/significantdigits.tex
+++ b/MASTER01-Numbers/significantdigits.tex
@@ -1,1 +1,5 @@
+
+\subsection{Significant Digits}
 There are three rules on determining how many significant figures are in a number: Non-zero digits are always significant. Any zeros between two significant digits are significant. A final zero or trailing zeros in the decimal portion ONLY are significant.
+
+\section{Floating Point Notation}
