--- a/Master.tex
+++ b/Master.tex
@@ -105,7 +105,7 @@ the ordered pairs of elements $(x,y)$ where $x \in X$ and $y \in Y$.
 
 
 
-\Large
+
 \begin{center}
   \textbf{Number Systems - Tutorial Sheet 2}
 \end{center}
@@ -337,14 +337,14 @@ the ordered pairs of elements $(x,y)$ where $x \in X$ and $y \in Y$.
 \section*{Part D: Natural, Rational and Real Numbers}
 \begin{framed}
 \begin{itemize}
-\item $\mb{N}$ : natural numbers (or positive integers) $\{1,2,3,\ldots\}$
-\item $\mb{Z}$ : integers $\{-3,-2,-1,0,1,2,3,\ldots\}$
+\item $\mathbb{N}$ : natural numbers (or positive integers) $\{1,2,3,\ldots\}$
+\item $\mathbb{Z}$ : integers $\{-3,-2,-1,0,1,2,3,\ldots\}$
 \begin{itemize}
-\item[$\ast$] (The letter $\mb{Z}$ comes from the word \emph{Zahlen} which means ``numbers" in German.)
+\item[$\ast$] (The letter $\mathbb{Z}$ comes from the word \emph{Zahlen} which means ``numbers" in German.)
 \end{itemize}
-\item $\mb{Q}$ : rational numbers
-\item $\mb{R}$ : real numbers
-\item $\mb{N} \subseteq \mb{Z } \subseteq \mb{Q} \subseteq \mb{R}$
+\item $\mathbb{Q}$ : rational numbers
+\item $\mathbb{R}$ : real numbers
+\item $\mathbb{N} \subseteq \mathbb{Z } \subseteq \mathbb{Q} \subseteq \mathbb{R}$
 \begin{itemize}
 \item[$\ast$] (All natural numbers are integers. All integers are rational numbers. All rational numbers are real numbers.)
 \end{itemize}
@@ -373,10 +373,10 @@ the ordered pairs of elements $(x,y)$ where $x \in X$ and $y \in Y$.
   The possible answers are
 
     \begin{itemize}
-    \item[a)] Natural number : $\mb{N} \subseteq \mb{Z } \subseteq \mb{Q} \subseteq \mb{R}$
-    \item[b)] Integer : $ \mb{Z } \subseteq \mb{Q} \subseteq \mb{R}$
-    \item[c)] Rational Number : $ \mb{Q} \subseteq \mb{R}$
-    \item[d)] Real Number $\mb{R}$
+    \item[a)] Natural number : $\mathbb{N} \subseteq \mathbb{Z } \subseteq \mathbb{Q} \subseteq \mathbb{R}$
+    \item[b)] Integer : $ \mathbb{Z } \subseteq \mathbb{Q} \subseteq \mathbb{R}$
+    \item[c)] Rational Number : $ \mathbb{Q} \subseteq \mathbb{R}$
+    \item[d)] Real Number $\mathbb{R}$
 
     %\item[i)]
     %\item[j)] $(15)_{10}$
@@ -388,7 +388,6 @@ the ordered pairs of elements $(x,y)$ where $x \in X$ and $y \in Y$.
 
 
 
-\end{document}
 
 % \item The Fibonacci sequence $f_n$ is defined recursively by the rule
 %   \begin{equation*}
@@ -506,7 +505,7 @@ Given the universal set $U$ and subsets $A$ and $B$, list the set $(A \cup B^{\p
 
 \subsection{Number Sets}
 
-%% \vspace{-1cm}
+%% %% - \vspace{-1cm}
 \textbf{Blackboard Bold Typeface}
 
 \begin{itemize}
@@ -519,7 +518,7 @@ Given the universal set $U$ and subsets $A$ and $B$, list the set $(A \cup B^{\p
 
 \subsection{Number Sets}
 
-%% \vspace{-1cm}
+%% %% - \vspace{-1cm}
 \textbf{Natural Numbers} ($\mathbb{N}$)
 \begin{itemize}
 \item The whole numbers from 1 upwards. 
@@ -536,7 +535,7 @@ Given the universal set $U$ and subsets $A$ and $B$, list the set $(A \cup B^{\p
  \subsection{Number Sets}
  
  
- %% \vspace{-0.5cm}
+ %% %% - \vspace{-0.5cm}
  \textbf{Integers} ($\mathbb{Z}$)
  \begin{itemize}
  \item The integers are all the whole numbers, all the negative whole numbers and zero.
@@ -553,7 +552,7 @@ Given the universal set $U$ and subsets $A$ and $B$, list the set $(A \cup B^{\p
   
   \subsection{Number Sets}
     
-  %% \vspace{-1.8cm}
+  %% %% - \vspace{-1.8cm}
   \textbf{Integers} ($\mathbb{Z}$)
   \begin{itemize}
  \item Natural numbers may also be referred to as positive integers, denoted $\mathbb{Z}^{+}$. \\(note the superscript)
@@ -566,7 +565,7 @@ Given the universal set $U$ and subsets $A$ and $B$, list the set $(A \cup B^{\p
    
    \subsection{Number Sets}
      
-   %% \vspace{-1.8cm}
+   %% %% - \vspace{-1.8cm}
    \textbf{Integers} ($\mathbb{Z}$)
    \begin{itemize}
  \item 0 is neither positive nor negative. The following set of non-negative numbers \[\{0,1,2,3,4,5,6,\ldots\} \] might be denoted $0 \cup \mathbb{Z}^{+}$
@@ -577,7 +576,7 @@ Given the universal set $U$ and subsets $A$ and $B$, list the set $(A \cup B^{\p
 
 \subsection{Number Sets}
 
-%% \vspace{-1cm}
+%% %% - \vspace{-1cm}
 \textbf{Rational Numbers} ($\mathbb{Q}$)
 \begin{itemize}
 \item Rational numbers, also known as quotients, are numbers you can make by dividing one integer by another (but not dividing by zero). 
@@ -589,7 +588,7 @@ Given the universal set $U$ and subsets $A$ and $B$, list the set $(A \cup B^{\p
 
 \subsection{Number Sets}
 
-%% \vspace{-1cm}
+%% %% - \vspace{-1cm}
 \textbf{Rational Numbers} ($\mathbb{Q}$)
    \begin{itemize}
    \item All integers are rational numbers 
@@ -603,7 +602,7 @@ Given the universal set $U$ and subsets $A$ and $B$, list the set $(A \cup B^{\p
    
    \subsection{Number Sets}
    
-   %% \vspace{-1cm}
+   %% %% - \vspace{-1cm}
    \textbf{Irrational Numbers} 
       \begin{itemize}
    \item A number that can not be written as the ratio of two integers is known as an irrational number.
@@ -615,7 +614,7 @@ Given the universal set $U$ and subsets $A$ and $B$, list the set $(A \cup B^{\p
 
 \subsection{Number Sets}
 
-%% \vspace{-1cm}
+%% %% - \vspace{-1cm}
 \textbf{Real Numbers} ($\mathbb{R}$)
 \begin{itemize}
 \item Irrational numbers are types of real numbers.
@@ -628,7 +627,7 @@ Given the universal set $U$ and subsets $A$ and $B$, list the set $(A \cup B^{\p
 
 \subsection{Number Sets}
 
-%% \vspace{-1cm}
+%% %% - \vspace{-1cm}
 \textbf{Real Numbers} ($\mathbb{R}$)
 \begin{itemize}
 \item There are numbers that are not real numbers, for example \textbf{imaginary numbers}, but we will not cover them in this presentation.
@@ -831,7 +830,7 @@ on $A$".
 
 \subsection{Discrete Maths : Relations}
 
-%% \vspace{-2cm}
+%% %% - \vspace{-2cm}
 \textbf{Example}
 \begin{itemize}
 \item Let $A = \{2, 3, 4, 6\}$ and $B = \{4, 6, 9\}$
@@ -844,7 +843,7 @@ divides $y$ exactly.
 
 \subsection{Discrete Maths : Relations}
 
-%% \vspace{-0.7cm}
+%% %% - \vspace{-0.7cm}
 \textbf{Example}
 \begin{itemize}
 
@@ -1219,7 +1218,7 @@ Showing your workings, use the rules of indices and logarithms to give the follo
 %% --------------------
 \subsection{Exercise 1}
 
-%% \vspace{-0.9cm}
+%% %% - \vspace{-0.9cm}
 
 \textbf{Remarks:}
 \begin{itemize}
@@ -1288,32 +1287,121 @@ What properties must a graph have in order for it to be a
 tree?
 (ii) Say, with reason, whether or not it is possible to construct a tree with
 degree sequence 4, 3, 3, 1, 1.
+\newpage
 
+
+\subsection{Irrational Numbers}
+An irrational number cannot be expressed as a ratio between two numbers and it cannot be written as a simple fraction because there is not a finite number of numbers when written as a decimal. Instead, the numbers in the decimal would go on forever, without repeating.
+
+
+
+In mathematics, the cardinality of a set is a measure of the "number of elements of the set". For example, the set A = {2, 4, 6} contains 3 elements, and therefore A has a cardinality of 3.
+
+
+\subsection{Proper subset definition.} 
+A proper subset of a set A is a subset of A that is not equal to A. In other words, if B is a proper subset of A, then all elements of B are in A but A contains at least one element that is not in B. For example, if A={1,3,5} then B={1,5} is a proper subset of A.
+
+\subsection{logical implication}
+
+%- http://whatis.techtarget.com/definition/logical-implication
+
+Logical implication is a type of relationship between two statements or sentences. The relation translates verbally into "logically implies" or "if/then" and is symbolized by a double-lined arrow pointing toward the right ( $\rightarrow$). If A and B represent statements, then $A\rightarrow B$ means "A implies B" or "If A, then B." The word "implies" is used in the strongest possible sense.
+
+
+As an example of logical implication, suppose the sentences A and B are assigned as follows:
+
+A = The sky is overcast.
+B = The sun is not visible.
+
+In this instance, A B is a true statement (assuming we are at the surface of the earth, below the cloud layer.) However, the statement B A is not necessarily true; it might be a clear night. Logical implication does not work both ways. However, the sense of logical implication is reversed if both statements are negated. That is,
+
+$$(A \rightarrow B)  \equiv (-B \rightarrow -A)$$
+
+Using the above sentences as examples, we can say that if the sun is visible, then the sky is not overcast. This is always true. In fact, the two statements A B and -B -A are logically equivalent.
+
+\newpage
+%---------------------------------------%
+\subsection*{Question 1}
+
+(b) Express the following hexadecimal number as a decimal number: (A32.8)16.
+[3]
+(c) Convert the following decimal number into base 2, showing all your working:
+$(253)_{10}$. [2]
+(d) Express the recurring decimal $0.4242424\ldots$
+ as a rational number in its simplest
+form. [2]
+
+
+%---------------------------------------%
+\subsection*{Question 7}
+%2002 Question 7
+Let S be a set and let R be a relation on S
+Explain what it means to say thet $\mathcal{R}$ is
+
+\begin{itemize}
+\item[(i)] reflexive
+\item[(ii)] symmetrix
+\item[(iii)] anti-symmetric
+\item[(iv)] Transitive
+\end{itemize}
+
+
+\subsection{Question 10}
+
+(a) Given the following adjacency matrices A and B where
+A =
+
+1 0 1
+0 1 2
+1 2 0
+
+ ,B =
+
+1 2 0
+2 0 1
+0 1 1
+
+%MAKE NO
+
+%--------------------------------------------%
+
+(i) Say whether or not the graphs they represent are isomorphic.
+(ii) Calculate A2 and A4 and say what information each gives about the graph
+corresponding to A. [6]
+(b) (i) Write down the augmented matrix for the following system of equations.
+
+\[2x + y - z = 2\]
+\[x - y + z = 4\]
+\[x + 2y + 2z = 10\]
+(ii) Use Gaussian elimination to solve the system. [4]
+
+
+%--------------------------------------------%
 \newpage
 \chapter{Proof by Induction}
 %------------------------------------------------ %
-\begin{frame}
-\frametitle{Proof By Induction}
-\Large
+
+\subsection{Proof By Induction}
+
 Prove by Induction the following expression
 \[ \sum_{r=1}^{r=n} r^2 = \frac{n(n+1)(2n+1)}{6} \]
 for all $n \in N_0$.
-\end{frame}
+
 %------------------------------------------------ %
-\begin{frame}
-\frametitle{Proof By Induction}
-\vspace{-1cm}
-\Large
+
+\subsection{Proof By Induction}
+%% - \vspace{-1cm}
+
 \begin{itemize}
 \item \textbf{Step 1} : Is the proposition true for $n = 1$?
 \item \textbf{Step 2} : Show that if the proposition is true for $n=k$, then it is also true for $n=k+1$.
 \item \textbf{Step 3} : Conclude that the proposition is true for all natural numbers greater than or equal to one.
 \end{itemize}
-\end{frame}
+
 %------------------------------------------------ %
-\begin{frame}
-\frametitle{Proof By Induction}
-\Large
+
+\subsection{Proof By Induction}
+
 Prove by induction the following expression
 \[ \sum_{r=1}^{r=n} r^2 = \frac{n(n+1)(2n+1)}{6} \]
 for all $n \in N_0$.
@@ -1324,77 +1412,77 @@ for all $n \in N_0$.
 \[ \sum_{r=1}^{r=1} r^2 = 1^2 = 1 \]
 
 
-\end{frame}
+
 %------------------------------------------------ %
-\begin{frame}
-\frametitle{Proof By Induction}
-\Large
+
+\subsection{Proof By Induction}
+
 \textbf{Left-hand side}
 \[ \sum_{r=1}^{r=1} r^2 = 1^2 = \boldsymbol{1} \]
 \textbf{Right-hand side}
 
 \[ \frac{n(n+1)(2n+1)}{6}  = \frac{1(1+1)(2\cdot 1+1)}{6} \]
 \[  = \frac{1\times 2 \times 3}{6} = \frac{6}{6}=\boldsymbol{1} \]
-\end{frame}
+
 %------------------------------------------------ %
-\begin{frame}
-\frametitle{Proof By Induction}
-\Large
+
+\subsection{Proof By Induction}
+
 \begin{itemize}
 \item \textbf{Step 1} : Is the proposition true for $n = 1$? 
 \end{itemize}
 \bigskip
 Yes: The left-hand side and right-hand side of the equation yield the same value.
 
-\end{frame}
+
 %------------------------------------------------ %
 
-\begin{frame}
-\frametitle{Proof By Induction}
-\vspace{-1cm}
-\Large
+
+\subsection{Proof By Induction}
+%% - \vspace{-1cm}
+
 \begin{itemize}
 \item \textbf{Step 2} : Show that if the proposition is true for $n=k$, then it is also true for $n=k+1$.
 \end{itemize}
 Given: \[ \sum_{r=1}^{r=k} r^2 = \frac{k(k+1)(2k+1)}{6} \]
 
 To Prove: \[ \sum_{r=1}^{r=k+1} r^2 = \frac{(k+1)(k+2)(2k+3)}{6} \]
-\end{frame}
+
 
 %------------------------------------------------ %
-\begin{frame}
-\frametitle{Proof By Induction}
-\vspace{-1cm}
-\Large
+
+\subsection{Proof By Induction}
+%% - \vspace{-1cm}
+
 
 
 \[ \sum_{r=1}^{r=k+1} r^2 = 1^2 + 2^2 + 3^2 + \ldots + k^2 + (k+1)^2 \]
 
 
 
-\end{frame}
+
 %------------------------------------------------ %
-\begin{frame}
-\frametitle{Proof By Induction}
-\vspace{-1cm}
-\Large
+
+\subsection{Proof By Induction}
+%% - \vspace{-1cm}
+
 
 
 \[ \sum_{r=1}^{r=k+1} r^2 = 1^2 + 2^2 + 3^2 + \ldots + k^2 + (k+1)^2 \]
 
 \[ \sum_{r=1}^{r=k+1} r^2 = \boldsymbol{\sum_{r=1}^{r=k} r^2} + (k+1)^2 \]
 
-\end{frame}
+
 %------------------------------------------------ %
-\begin{frame}
-\frametitle{Proof By Induction}
-\vspace{-1cm}
-\Large
+
+\subsection{Proof By Induction}
+%% - \vspace{-1cm}
+
 \[ \sum_{r=1}^{r=k+1} r^2 = \boldsymbol{\sum_{r=1}^{r=k} r^2} + (k+1)^2 \]
 
 \[ \sum_{r=1}^{r=k+1} r^2 = \frac{k(k+1(2k+1
 ))}{6} + (k+1)^2 \]
-\end{frame}
+
 
 %------------------------------------------------ %
 
