--- a/permutations.tex
+++ b/permutations.tex
@@ -1,104 +1,141 @@
 \documentclass{beamer}
 
 \usepackage{amsmath}
+\usepackage{framed}
+\usepackage{amssymb}
+\usepackage{graphics}
 
 \begin{document}
-%--------------------------------------------------%
 \begin{frame}
+\Huge
+\[ \mbox{Mathematics for Computing} \]
+\huge
+\[ \mbox{Anagrams as Permutations} \]
+
+\Large
+\[ \mbox{kobriendublin.wordpress.com} \]
+\[ \mbox{Twitter: @StatsLabDublin} \]
+
+\end{frame}
+%-------------------------------------%
+\begin{frame}
+\frametitle{Permutations}
+\Large
+\vspace{-2cm}
+How many anagrams (permutations of the letters) are there of the following words
+\begin{enumerate}
+\item ANSWER
+\item PERMUTE
+\item ANAGRAM
+\item LITTLE
+\end{enumerate}
+
+\end{frame}
+%-------------------------------------%
+\begin{frame}
+\frametitle{Permutations}
+\Large
+\vspace{-2cm}
+\textbf{Part 1 : ANSWER}\\
+Examples:
 \begin{center}
-{ \Huge
-Permutations} \\{\Large Example 2}
-\\
-\bigskip
-{ \Large
-youtube.com/StatsLabDublin \\ \vspace{0.2cm} Twitter: @statslabdublin
-}
+ASNWRE,\;
+SANERW,\;
+REWSAN,\;...
 \end{center}
+
+Since ANSWER has 6 distinct letters, the number of permutations (anagrams) is
+\LARGE
+\[6! = 6\times 5 \times 4 \times 3 \times 2\times 1 = \boldsymbol{720} \]
 \end{frame}
-
-
+%-------------------------------------%
 \begin{frame}
 \frametitle{Permutations}
 \Large
-\vspace{-1.0cm}
-Suppose a four letter code is made from the letters \textbf{\textit{\{a,b,c,d,e\}}}, where repetitions are allowed and the order of the letters in the code is significant\\ \bigskip For example
-\textbf{\textit{a,a,e,c}} is a different code to \textbf{\textit{a,c,e,a}}.
-\end{frame}
-
-
-\begin{frame}
-
-\frametitle{Permutations}
-\Large
+\vspace{-0.3cm}
+\textbf{Part 2 : PERMUTE}\\
 \begin{itemize}
-\item Let $\mathcal{U}$ be the set of all such codes.
-\item Let $\mathcal{V}$ be the set of all such codes beginning with a vowel.
-\item Let $\mathcal{P}$ be the set of all such codes which are palindromic.
-\end{itemize} 
-\bigskip
-(A palindromic code is a string of letters which read the same backwards as forwards, for example \textbf{\textit{a,e,c,e,a}} is a 5 letter palindromic code.)\\ \bigskip
+\item The word PERMUTE has 7 letters, but only 6 different letters. 
+\item There are 7! ways to arrange 7 letters.
+\item However, interchanging the two Es does not result in a new permutation. There would be two identical anagrams.
+\end{itemize}
 
+\begin{center}
+P\textcolor{red}{E}RMUT\textcolor{blue}{E}, \; MUT\textcolor{red}{E}P\textcolor{blue}{E}R, \; P\textcolor{red}{E}T\textcolor{blue}{E}MUR,\; ..\\
+P\textcolor{blue}{E}RMUT\textcolor{red}{E}, \; MUT\textcolor{blue}{E}P\textcolor{red}{E}R, \; P\textcolor{blue}{E}T\textcolor{red}{E}MUR,\; ..
+\end{center}
 \end{frame}
-
+%-------------------------------------%
 \begin{frame}
-
 \frametitle{Permutations}
 \Large
-How many elements are there in the set $\mathcal{U}$?
+\vspace{-0.3cm}
+\textbf{Part 2 : PERMUTE}\\
+\begin{itemize}
+\item The number of permutations (anagrams) is half of 7! .
+\LARGE
+\[\frac{7!}{2} =  \frac{5040}{2} = \boldsymbol{2520} \]
+\end{itemize}
+\end{frame}
+
+%-------------------------------------%
+\begin{frame}
+\frametitle{Permutations}
+\Large
+\vspace{-0.1cm}
+\textbf{Part 3 : ANAGRAM}\\
+\begin{itemize}
+\item The word ANAGRAM has 7 letters, but there are three As.
+\item From before, there are 7! ways to arrange 7 letters.
+\item How many new permutations are found by re-arranging the As?
+\end{itemize}
+\LARGE
 \begin{center}
-\begin{tabular}{|c|c|c|c|}
-\hline (i) &  (ii) &  (iii) &  (iv) \\ 
-\hline {\color{white}More space} &{\color{white}More space}  & {\color{white}More space} &{\color{white}More space}  \\ 
- {\color{white}More space} &{\color{white}More space}  & {\color{white}More space} &{\color{white}More space}  \\ 
-\hline 
-\end{tabular} 
+\textcolor{red}{A}N\textcolor{blue}{A}GR\textcolor{purple}{A}M \; 
+\textcolor{red}{A}N\textcolor{purple}{A}GR\textcolor{blue}{A}M \; 
+\textcolor{blue}{A}N\textcolor{red}{A}GR\textcolor{purple}{A}M \; \\
+\textcolor{purple}{A}N\textcolor{red}{A}GR\textcolor{blue}{A}M \; 
+\textcolor{blue}{A}N\textcolor{purple}{A}GR\textcolor{red}{A}M \; 
+\textcolor{purple}{A}N\textcolor{blue}{A}GR\textcolor{red}{A}M \; 
 \end{center}
 \end{frame}
 
+%-------------------------------------%
 \begin{frame}
-
 \frametitle{Permutations}
 \Large
-How many elements are there in the set $\mathcal{V}$?
-\begin{center}
-\begin{tabular}{|c|c|c|c|}
-\hline (i) &  (ii) &  (iii) &  (iv) \\ 
-\hline {\color{white}More space} &{\color{white}More space}  & {\color{white}More space} &{\color{white}More space}  \\ 
- {\color{white}More space} &{\color{white}More space}  & {\color{white}More space} &{\color{white}More space}  \\ 
-\hline 
-\end{tabular} 
-\end{center}
+\vspace{-0.1cm}
+\textbf{Part 3 : ANAGRAM}\\
+\begin{itemize}
+\item We divide 7! by 3! to account for the identical anagrams.
+\LARGE
+\[\frac{7!}{3!} =  \frac{5040}{6} = \boldsymbol{840} \]
+\end{itemize}
 \end{frame}
-
+%-------------------------------------%
 \begin{frame}
-
 \frametitle{Permutations}
 \Large
-How many elements are there in the set $\mathcal{P}$?
-\begin{center}
-\begin{tabular}{|c|c|c|c|}
-\hline (i) &  (ii) &  (iii) &  (iv) \\ 
-\hline {\color{white}More space} &{\color{white}More space}  & {\color{white}More space} &{\color{white}More space}  \\ 
- {\color{white}More space} &{\color{white}More space}  & {\color{white}More space} &{\color{white}More space}  \\ 
-\hline 
-\end{tabular} 
-\end{center}
+\vspace{-2.3cm}
+\textbf{Part 2 : PERMUTE}\\
+\begin{itemize}
+\item We re-express the answer from part 2 as follows:
+\LARGE
+\[\frac{7!}{2!} =  \frac{5040}{2} = \boldsymbol{2520} \]
+\end{itemize}
 \end{frame}
+%-------------------------------------%
 \begin{frame}
-
 \frametitle{Permutations}
 \Large
-How many elements are there in the sets $\mathcal{V}$ and $\mathcal{P}$?
-\begin{center}
-\begin{tabular}{|c|c|c|c|}
-\hline (i) &  (ii) &  (iii) &  (iv) \\ 
-\hline {\color{white}More space} &{\color{white}More space}  & {\color{white}More space} &{\color{white}More space}  \\ 
- {\color{white}More space} &{\color{white}More space}  & {\color{white}More space} &{\color{white}More space}  \\ 
-\hline 
-\end{tabular} 
-\end{center}
-\end{frame}
-\begin{frame}
-Empty
+\vspace{-0.3cm}
+\textbf{Part 4 : LITTLE}\\
+\begin{itemize}
+\item The word LITTLE has 6 letters, but there are two Ls and two Ts.
+\item From before, there are 6! ways to arrange 6 letters.
+\item Again, interchanging the two Ls and Ts does not result in a new permutation. 
+\LARGE
+\[\frac{6!}{2!\times 2!} =  \frac{720}{4} = \boldsymbol{180} \]
+\end{itemize}
 \end{frame}
 \end{document}
