--- a/Master.tex
+++ b/Master.tex
@@ -176,39 +176,6 @@ which the number of digits before and after the decimal point is set, called fix
 %\end{itemize}
 %\end{multicols}
 
-\begin{enumerate}
-\item Which of the following binary numbers is the result of this binary division: $(111001)_{2} \div ( 10011)_{2}$. % (57) /  (19)
-\begin{multicols}{2}
-\begin{itemize}
-\item[a)] $(10)_2$ %2
-\item[b)] $(11)_{2}$ %3
-\item[c)] $(100)_{2}$ %4
-\item[d)] $(101)_{2}$ %5
-\end{itemize}
-\end{multicols}
-\item Which of the following binary numbers is the result of this binary division: $(101010)_{2} \div ( 111 )_{2}$. % (42) /  (7)
-\begin{multicols}{2}
-\begin{itemize}
-\item[a)] $(11)_2$ %3
-\item[b)] $(100)_{2}$ %4
-\item[c)] $(101)_{2}$ %5
-\item[d)] $(110)_{2}$ %6
-\end{itemize}
-\end{multicols}
-\item Which of the following binary numbers is the result of this binary division: $(1001110)_{2} \div ( 1101 )_{2}$. % (78) /  (13)
-\begin{multicols}{2}
-\begin{itemize}
-
-\item[a)] $(100)_{2}$ %4
-\item[b)] $(110)_{2}$ %6
-\item[c)] $(111)_{2}$ %7
-\item[d)] $(1001)_2$ %9
-\end{itemize}
-\end{multicols}
-\end{enumerate}
-
-
-\end{enumerate}
 
 % \newpage
 \section*{Part D: Natural, Rational and Real Numbers}
@@ -289,226 +256,6 @@ which the number of digits before and after the decimal point is set, called fix
 
 \subsection*{Floating Point Notation}
 (Demonstration on white board)
-
-
-\section*{Part A: Number Systems - Binary Numbers}
-\begin{enumerate}
-\item Express the following decimal numbers as binary numbers.
-\begin{multicols}{4}
-\begin{itemize}
-\item[i)] $(73)_{10}$
-\item[ii)] $(15)_{10}$
-\item[iii)] $(22)_{10}$
-\end{itemize}
-\end{multicols}
-
-All three answers are among the following options.
-\begin{multicols}{4}
-\begin{itemize}
-\item[a)] $(10110)_{2}$ %22
-\item[b)] $(1111)_{2}$ %15
-\item[c)] $(1001001)_{2}$ %73
-\item[d)] $(1000010)_{2}$ %64
-\end{itemize}
-\end{multicols}
-
-\item Express the following binary numbers as decimal numbers.
-\begin{multicols}{4}
-\begin{itemize}
-\item[a)] $(101010)_{2}$
-\item[b)] $(10101)_{2}$
-\item[c)] $(111010)_{2}$
-\item[d)] $(11010)_{2}$
-\end{itemize}
-\end{multicols}
-\item Express the following binary numbers as decimal numbers.
-\begin{multicols}{4}
-\begin{itemize}
-\item[a)] $(110.10101)_{2}$
-\item[b)] $(101.0111)_{2}$
-\item[c)] $(111.01)_{2}$
-\item[d)] $(110.1101)_{2}$
-\end{itemize}
-\end{multicols}
-\item Express the following decimal numbers as binary numbers.
-\begin{multicols}{4}
-\begin{itemize}
-\item[a)] $(27.4375)_{10}$  %
-\item[b)] $(5.625)_{10}$
-\item[c)] $(13.125)_{10}$
-\item[d)] $(11.1875)_{10}$
-\end{itemize}
-\end{multicols}
-\end{enumerate}
-
-\section*{Part B: Number Systems - Binary Arithmetic}
-%http://www.csgnetwork.com/binaddsubcalc.html
-(See section 1.1.3 of the text)
-\begin{enumerate}
-\item Perform the following binary additions.
-\begin{multicols}{2}
-\begin{itemize}
-\item[a)] $(110101)_{2}$ + $(1010111)_{2}$
-\item[b)] $(1010101)_{2}$ + $(101010)_{2}$
-\item[c)] $(11001010)_{2}$ + $(10110101)_{2}$
-\item[d)] $(1011001)_{2}$ + $(111010)_{2}$
-\end{itemize}
-\end{multicols}
-
-\item Perform the following binary subtractions.
-\begin{multicols}{2}
-\begin{itemize}
-\item[a)] $(110101)_{2}$ - $(1010111)_{2}$
-\item[b)] $(1010101)_{2}$ - $(101010)_{2}$
-\item[c)] $(11001010)_{2}$ - $(10110101)_{2}$
-\item[d)] $(1011001)_{2}$ - $(111010)_{2}$
-\end{itemize}
-\end{multicols}
-
-
-\item Perform the following binary multiplications.
-\begin{multicols}{2}
-\begin{itemize}
-\item[a)] $(1001)_{2}\times( 1000)_{2}$  % 9 by 8
-\item[b)] $(101)_{2}\times(1101)_{2}$ % 5 by 11
-\item[c)] $(111)_{2}\times(1111)_{2}$ % 7 by 15
-\item[d)] $(10000)_{2}\times(11001)_{2}$    %16 by 25
-\end{itemize}
-\end{multicols}
-
-\newpage
-
-\item Perform the following binary multiplications.
-%\begin{multicols}{2}
-%\begin{itemize}
-%\item[a)] $(1001000)_{2} \div ( 1000)_{2}$
-%\item[b)] $(101101)_{2} \div (1001)_{2}$
-%\item[c)] $(1001011000)_{2} \div (101000)_{2}$
-%\item[d)] $(1100000)_{2} \div (10000)_{2}$
-%\end{itemize}
-%\end{multicols}
-
-\begin{enumerate}
-\item Which of the following binary numbers is the result of this binary division: $(10)_{2} \times ( 1101)_{2}$. % % (2) /  (13)
-\begin{multicols}{2}
-\begin{itemize}
-\item[a)] $(11010)_{2}$ %26
-\item[b)] $(11100)_{2}$ %28
-\item[c)] $(10101)_{2}$ %21
-\item[d)] $(11011)_2$ %27
-\end{itemize}
-\end{multicols}
-\item Which of the following binary numbers is the result of this binary division: $(101010)_{2} \times( 111 )_{2}$. % (4) /  (6)
-\begin{multicols}{2}
-\begin{itemize}
-\item[a)] $(11000)_{2}$ %24
-\item[b)] $(11001)_{2}$ %25
-\item[c)] $(10101)_{2}$ %21
-\item[d)] $(11011)_2$ %27
-\end{itemize}
-\end{multicols}
-\item Which of the following binary numbers is the result of this binary division: $(1001110)_{2}\times ( 1101 )_{2}$. % (9) /  (3)
-\begin{multicols}{2}
-\begin{itemize}
-\item[a)] $(11000)_{2}$ %24
-\item[b)] $(11001)_{2}$ %25
-\item[c)] $(10101)_{2}$ %21
-\item[d)] $(11011)_2$ %27
-\end{itemize}
-\end{multicols}
-\end{enumerate}
-
-%----------------------------------------------------------------%
-
-\item Perform the following binary divisions.
-%\begin{multicols}{2}
-%\begin{itemize}
-%\item[a)] $(1001000)_{2} \div ( 1000)_{2}$
-%\item[b)] $(101101)_{2} \div (1001)_{2}$
-%\item[c)] $(1001011000)_{2} \div (101000)_{2}$
-%\item[d)] $(1100000)_{2} \div (10000)_{2}$
-%\end{itemize}
-%\end{multicols}
-
-\begin{enumerate}
-\item Which of the following binary numbers is the result of this binary division: $(111001)_{2} \div ( 10011)_{2}$. % (57) /  (19)
-\begin{multicols}{2}
-\begin{itemize}
-\item[a)] $(10)_2$ %2
-\item[b)] $(11)_{2}$ %3
-\item[c)] $(100)_{2}$ %4
-\item[d)] $(101)_{2}$ %5
-\end{itemize}
-\end{multicols}
-\item Which of the following binary numbers is the result of this binary division: $(101010)_{2} \div ( 111 )_{2}$. % (42) /  (7)
-\begin{multicols}{2}
-\begin{itemize}
-\item[a)] $(11)_2$ %3
-\item[b)] $(100)_{2}$ %4
-\item[c)] $(101)_{2}$ %5
-\item[d)] $(110)_{2}$ %6
-\end{itemize}
-\end{multicols}
-\item Which of the following binary numbers is the result of this binary division: $(1001110)_{2} \div ( 1101 )_{2}$. % (78) /  (13)
-\begin{multicols}{2}
-\begin{itemize}
-
-\item[a)] $(100)_{2}$ %4
-\item[b)] $(110)_{2}$ %6
-\item[c)] $(111)_{2}$ %7
-\item[d)] $(1001)_2$ %9
-\end{itemize}
-\end{multicols}
-\end{enumerate}
-
-
-\end{enumerate}
-
-
-\section*{Part C: Number Bases - Hexadecimal}
-\begin{enumerate}
-
-\item Answer the following questions about the hexadecimal number systems
-\begin{itemize}
-\item[a)] How many characters are used in the hexadecimal system?
-\item[b)] What is highest hexadecimal number that can be written with two characters? \item[c)] What is the equivalent number in decimal form?
-\item[d)] What is the next highest hexadecimal number?
-\end{itemize}
-
-
-\item Which of the following are not valid hexadecimal numbers?
-\begin{multicols}{4}
-\begin{itemize}
-\item[a)] $73$
-\item[b)] $A5G$
-\item[c)] $11011$
-\item[d)] $EEF$
-\end{itemize}
-\end{multicols}
-
-\item Express the following decimal numbers as a hexadecimal number.
-\begin{multicols}{4}
-\begin{itemize}
-\item[a)] $(73)_{10}$
-\item[b)] $(15)_{10}$
-\item[c)] $(22)_{10}$
-\item[d)] $(121)_{10}$
-\end{itemize}
-\end{multicols}
-
-
-\item Compute the following hexadecimal calculations.
-\begin{multicols}{4}
-\begin{itemize}
-\item[a)] $5D2+A30$
-\item[b)] $702+ABA$
-\item[c)] $101+111$
-\item[d)] $210+2A1$
-\end{itemize}
-\end{multicols}
-\end{enumerate}
-
-
 
 
 
@@ -804,128 +551,6 @@ as a rational number in its simplest form.
 \item x= 12/999 = 4/333 (Answer!)
 \end{itemize}
 
-%------------------------------------------$
-
-\subsection*{2008  Zone A question2a}
-$B = \{3n-1 :n \in Z^{+} \}$
-Describe the set B using the listing method
-
-\begin{itemize}
-\item Let $n=1$. Consequently $3(1)-1 =2$
-\item Let $n=2$. Likewise $3(2)-1 =5$
-\item Let $n=3$. $3(3)-1 = 8 $
-\item The repeated differences are 3. The next few values are 11, 14 and 17
-\item So by the listing method $B= \{2,5,8,11,14,17,\ldots\}$
-\end{itemize}
-
-$A = \{3,5,7,9,ldots \}$
-Describe the set A using the rules of inclusion method
-
-\begin{itemize}
-\item The repeated differences are 2.
-\item We can say the rule has the form $2n+k$
-\item For the first value n=1. Therefore $2+k=3$
-\item Checking this , for the second value , n=2. Therefore $4+k=5$
-\item Clearly k = 1.
-\item $A = \{2n+1 :n \in Z^{+} \}$
-\item So by the listing method $B= \{2,5,8,11,14,17,\ldots\}$
-\end{itemize}
-
-\subsection{Cartesian Product}
-{
-\begin{itemize}
-\item Let $X$ and $Y$ be sets.
-\item The \textbf{cartesian product} $X \times Y$ is the set whose elements are \textbf{all} of 
-the ordered pairs of elements $(x,y)$ where $x \in X$ and $y \in Y$.
-\end{itemize}
-
-\begin{itemize}
-\item Let $X = \{a,b,c\}$
-\item Let $Y = \{0,1\}$ 
-\item The cartesian product $X \times Y$ is therefore:
-\end{itemize}
-
-\begin{itemize}
-\item Importantly $X \times Y \neq Y \times X$
-\item Recall: Let $X = \{a,b,c\}$ and let $Y = \{0,1\}$ 
-\item The cartesian product $Y \times X$ is therefore:
-\end{itemize}
-}
-
-
-
-
-
-\subsection{The Cartesian Product}
-Exercises
-
-
- Discrete Maths
- 
-A binary relation on a set A is the collection of ordered pairs of elements of A. In other words, it is the subset of the cartesian product A2= AA
-
-Cartesian Product
- 
-This is a direct product pf 2 sets
- 
-XY = {(x,y)| xXandyY }
- 
-4 suits of cards and 13 Ranks, therefore 52 element cartesian prodcut.
- 
-N.B         AB BA
-              A=A =
- 
-Cartesian product is not associative
-\subsection*{Worked Example}
-
-Suppose that the Universal Set $\mathcal{U}$ is the set of integers from 1 to 9.
-\[ \mathcal{U} = \{1,2,3,4,5,6,7,8,9\}, \]
-
-and that the set $\mathcal{A}$ contains the prime numbers between 1 to 9 inclusive.
-
-\[ \mathcal{A} = \{1,2,3,5,7\}, \]
-
-and that the set $\mathcal{B}$ contains the even numbers between 1 to 9 inclusive.
-
-\[ \mathcal{B} = \{2,4,6,8\}. \]
-
-%--------------------------------------------------------%
-\subsubsection*{Complements}
-\begin{itemize}
-
-\item The Complements of A and B are the elements of the universal set not contained in A and B.
-
-\item The complements are denoted $\mathcal{A}^{\prime}$ and $\mathcal{B}^{\prime}$
-\[ \mathcal{A}^{\prime} = \{4,6,8,9\}, \]
-\[ \mathcal{B}^{\prime} = \{1,3,5,7,9\}, \]
-
-\end{itemize}
-
-
-%--------------------------------------------------------%
-
-\subsubsection*{Intersection}
-\begin{itemize}
-
-\item Intersection of two sets describes the elements that are members of both the specified Sets
-
-\item The intersection is denoted $\mathcal{A\cap B}$ 
-\[ \mathcal{A\cap B} = \{2\}\]
-
-\item only one element is a member of both A and B.
-\end{itemize}
-%--------------------------------------------------------%
-
-\subsubsection*{Set Difference}
-\begin{itemize}
-
-\item The Set Difference of A with regard to B are list of elements of A not contained by B.
-
-\item The complements are denoted $\mathcal{A-B}$ and $\mathcal{B-A}$
-\[ \mathcal{A-B} = \{1,3,5,7\}, \]
-
-\[ \mathcal{B-A} = \{4,6,8\}, \]
-\end{itemize}
 \chapter{graph theory }
 Given the following definitions for simple, connected graphs:
 \begin{itemize}
@@ -1229,6 +854,8 @@ Given $f : \textbf{R} \rightarrow \textbf{R}$ where f(x) =3x-1,define fully
 the inverse of the function f ,i.e.$f^{-1}$. 
 State the value of $f^{-1}(2)$
 
+
+\newpage
 
 \section*{Prepositional Logic}
 
@@ -1632,6 +1259,234 @@ Example
 % % \subfile{session06f.tex}
 
 
+\subsubsection*{Question 1 : Binary numbers}
+\begin{itemize}
+%---------------------------%
+\item[(a)] Express the following binary numbers as decimal numbers
+\begin{multicols}{2}
+\begin{itemize}
+\item[(i)] $101$
+\item[(ii)] $1101$
+\item[(iii)] $11011$
+\item[(iv)] $100101$
+\end{itemize}
+\end{multicols}
+
+%---------------------------%
+\item[(b)] Express the following decimal numbers as binary numbers
+\begin{multicols}{2}
+\begin{itemize}
+\item[(i)] 6
+\item[(ii)] 15
+\item[(iii)] 37
+\item[(iv)] 77
+\end{itemize}
+\end{multicols}
+
+\end{itemize}
+%-------------%-------------%-------------%----------------
+\subsubsection*{Question 2}
+A number is expressed in base 5 as $(234)_5$. What is it as decimal number?
+Suppose you multiply $(234)_5$ by 5. what would be the answer in base 5.
+
+%-------------%-------------%-------------%----------------
+\subsubsection*{Question 3}
+
+Perform the following binary additions
+\begin{multicols}{2}
+\begin{itemize}
+\item[(i)] $1011+ 1111$
+\item[(ii)] $10101  + 10011$
+\item[(iii)] $1010 + 11010$
+\item[(iv)] $101010 + 10101 + 101$
+\end{itemize}
+\end{multicols}
+
+
+%-------------%-------------%-------------%----------------
+\subsubsection*{Question 4}
+Perform the binary additions
+
+\begin{itemize}
+\item $(10111)_2 +(111010)_2$
+
+\item $(1101)_2 + (1011)_2 + (1111)_2$
+\end{itemize}
+
+%-------------%-------------%-------------%----------------
+\subsubsection*{Question 5}
+
+Perform the binary subtractions using both the bit-borrowing method and the two's complement method.
+\begin{itemize}
+\item $(1001)_2 -(111)_2$
+\item $(110000)_2 -(10111)_2$
+\end{itemize}
+
+
+%-------------%-------------%-------------%----------------
+\subsubsection*{Question 6}
+
+Perform the binary multiplications
+\begin{itemize}
+\item $(1101)_2 \times (101)_2$
+\item $(1101)_2 \times (1101)_2$
+\end{itemize}
+
+
+%-------------%-------------%-------------%----------------
+\subsubsection*{Question 7}
+\begin{itemize}
+
+
+\item[(a)] What is highest Hexadecimal number that can be written with two characters, and what is it's equivalent in decimal form?
+What is the next highest hexadecimal number?
+
+% \[FF = 255\] % Remark 
+\item[(b)] Which of the following are not valid hexadecimal numbers?
+
+\begin{multicols}{2}
+\begin{itemize}
+\item[(i)] A5G 
+\item[(ii)] 73 
+\item[(iii)] EEF
+\item[(iv)] 101
+\end{itemize}
+\end{multicols}
+\end{itemize}
+
+
+
+%-------------%-------------%-------------%----------------
+\subsubsection*{Question 8 : Binary Substraction}
+\textbf{Exercises:}
+
+\begin{multicols}{2}
+\begin{itemize}
+\item[(i)] 110 - 10
+\item[(ii)] 101 - 11  
+\item[(iii)] 1001 - 11
+\item[(iv)] 10001 - 100 
+\item[(v)] 101001 - 1101
+\item[(vi)] 11010101-1101
+\end{itemize}
+\end{multicols}
+
+
+
+%-------------%-------------%-------------%----------------
+\subsubsection*{Question 9}
+
+\begin{itemize}
+%---------------------------%
+\item[(a)] Suppose 2341 is a base-5 number
+Compute the equivalent in each of the following forms:
+\begin{itemize}
+\item[(i)] decimal number
+\item[(ii)] hexadecimal number
+\item[(iii)] binary number
+\end{itemize}
+%---------------------------%
+\item[(b)] Perform the following binary additions
+\begin{itemize}
+\item[(i)] $1011+ 1111$
+\item[(ii)] $10101  + 10011$
+\item[(iii)] $1010 + 11010$
+\end{itemize}
+%---------------------------%
+\end{itemize}
+
+%-------------%-------------%-------------%----------------
+\subsubsection*{Question 10}
+
+Calculate working in hexadecimal
+\begin{itemize}
+\item[(i)] $(BBB)_{16} + (A56)_{16}$
+\item[(ii)] $(BBB)_{16} - (A56)_{16}$
+\end{itemize} 
+
+
+%-------------%-------------%-------------%----------------
+\subsubsection*{Question 11}
+
+Write the hex number $(EC4)_{16}$ in binary.
+Write the binary number $(11110110101|)_2$ in hex.
+%-------------%-------------%-------------%----------------
+%-------------%-------------%-------------%----------------
+\subsubsection*{Question 12}
+
+Express the decimal number 753 in binary , base 5 and hexadecimal.
+
+%-------------%-------------%-------------%----------------
+%-------------%-------------%-------------%----------------
+\subsubsection*{Question 13}
+
+Express 42900 as a product of its prime factors, using index notation for repeated factors.
+
+%-------------%-------------%-------------%----------------
+%-------------%-------------%-------------%----------------
+\subsubsection*{Question 14}
+
+Expresse the recuring decimals 
+\begin{itemize}
+\item[(i)] $0.727272\ldots$
+\item[(ii)] $0.126126126....$
+\item[(iii)] $0.7545454545...$
+\end{itemize} 
+as rational numbers in its simplest form.
+
+%-------------%-------------%-------------%----------------
+%-------------%-------------%-------------%----------------
+\subsubsection*{Question 15}
+Given that $\pi$ is an irrational number, can you say whether $\frac{\pi}{2}$ is rational or irrational.
+or is it impossible to tell?
+
+%-------------------------------------------------------- %
+\subsubsection*{Question 16}
+\begin{itemize}
+\item[(i)] Given x is the irrational positive number $\sqrt{2}$, express $x^8$ in binary notation\\
+\item[(ii)] From part (i), is $x^8$ a rational number?
+\end{itemize}
+
+%-------------%-------------%-------------%----------------
+%-------------%-------------%-------------%----------------
+\subsubsection*{Question 17}
+\begin{enumerate}
+\item[(i)] 5/7 lies between 0.714 and 0.715.
+\item[(ii)] $\sqrt(2)$ is at least 1.41.
+\item[(iii)] $\sqrt(3)$  9s at lrast 1.732 and at most 1.7322.
+\end{enumerate}
+
+
+%-------------%-------------%-------------%----------------
+%-------------%-------------%-------------%----------------
+\subsubsection*{Question 18}
+\begin{itemize}
+\item[(i)] Write down the numbers 0.0000526 in floating point form.
+\item[(ii)] How is the number 1 expressed in floating point form.
+\end{itemize}
+
+
+%-------------%-------------%-------------%----------------
+%-------------%-------------%-------------%----------------
+\subsubsection*{Question 19}
+\begin{itemize}
+\item Deduce that every composite integer $n$ has a prime factor such that $p \leq \sqrt{n}$.
+\item Decide whether 899 is a prime.
+\end{itemize}
+
+%-------------%-------------%-------------%----------------
+%-------------%-------------%-------------%----------------
+\subsubsection*{Question 20}
+
+\begin{itemize}
+\item What would be the maximum numbber of digits that a decimal fraction with denominator 13 
+could have in a recurring block in theory?
+
+\item Can you predict which other fractions with denominator 13 will have the same digits as 1/13 in their recurring block?
+\end{itemize}
+
+
+
 %----------------------------------------- %
 \section{Video 6}
 
@@ -1676,7 +1531,7 @@ The font that the following symbols are written in (i.e. $\mathbb{N}$, $\mathbb{
 \item $\mathbb{C}$ Complex Numbers
 \end{itemize}
 %========================================================================================= %
-
+\newpage
 \section*{Rules of Inclusion, Listing and Cardinality}
 For each of the following sets, a set is specified by the rules of inclusion method and listing method respectively. Also stated is the cardinality of that data set.
 \subsection*{Worked example 1}
@@ -1934,9 +1789,7 @@ P(X = k) =\frac{m^{k}\mathrm{e}^{-m}}{k!}.
 \section{Video 1 :  Set Theory Listing Method}
 %--------------------------------------------%
 
-%--------------------------------------------%
-
-\section{Set Theory : Listing Method}
+%\frametitle{Set Theory : Listing Method}
 
 Describe the following sets using the Listing Method
 
@@ -1946,9 +1799,11 @@ Describe the following sets using the Listing Method
 \end{itemize}
 
 
+%--------------------------------------------%
 
+%\frametitle{Set Theory : Listing Method}
 
-
+\vspace{-4cm}
 \textbf{Part 1:} $ \{ 10^m : -2 \leq m \leq 4, m \in \mathbb{Z} \} $
 
 
@@ -1980,7 +1835,25 @@ Using the above sentences as examples, we can say that if the sun is visible, th
 \newpage
 %---------------------------------------%
 \chapter{Session 3}
+\section*{Question 3}
+\subsection*{Part A : Propositions}
+Let p, q be the following propositions:
+\begin{itemize}
+\item p : this apple is red, 
+\item q : this apple is ripe.
+\end{itemize}
 
+\noindent Express the following statements in words as simply as you can:
+\begin{itemize}
+\item[(i)] $p \rightarrow q$
+\item[(ii)] $p \wedge \neg q$.
+\end{itemize}
+
+\noindent Express the following statements symbolically:
+\begin{itemize}
+\item[(iii)] This apple is neither red nor ripe.
+\item[(iv)] If this apple is not red it is not ripe.
+\end{itemize}
 
 \subsection*{Part B : Logical Operations}
 Let $n \in \{1,2,3,4,5,6,7,8,9\}$ and let p and q be the following propostions concerning 
@@ -2081,7 +1954,23 @@ Let p, q be the following propositions:
 \item[(iv)] If this apple is not red it is not ripe.
 \end{itemize}
 
+\subsection*{Part B : Logical Operations}
+Let $n \in \{1,2,3,4,5,6,7,8,9\}$ and let p and q be the following propostions concerning 
+the integers $n$.
 
+\begin{itemize}
+\item[p] $n$ is event
+\item[q] $n<5$
+\end{itemize}
+
+Find the values of $n$ for which each of the following compound statement is true,
+
+\begin{itemize}
+\item[(i)] $\neg p$
+\item[(ii)] $p \wedge q$
+\item[(iii)] $\neg p \vee q$ 
+\item[(iv)] $p \oplus q$
+\end{itemize}
 
 %------------------------------------%
 \newpage
@@ -2124,7 +2013,6 @@ Draw the direct graph of $A$. Based on the Digraph of $A$ discuss whether or not
 \item[(iii)] Transitive
 \item[(iv)] Antisymmetric
 \end{itemize}
-
 \subsection*{Part B : Relations}
 Determine which of the following relations $ x R y$ are reflexive, transitive, symmetric, or antisymmetric on the following - there may be more than one characteristic.  if
 
@@ -2251,7 +2139,13 @@ Necessary Condtions for Invertibility of a Function
 %Section 5 Graph Theory
 
 \section*{Equivalence Relations}
+\begin{itemize}
+\item
+\item
+\item
+\end{itemize}
 
+%------------------------- %
 %-------------------------- %
 % Section Sequence and Series, with Proof By Induction
 
@@ -2282,9 +2176,29 @@ Farm has 5 chickens: Amy, Beth, Carol, Daisy and Eve, with the following relatio
 
 \section{Section 4 Functions}
 
+\subsection{Invertible Functions}
+A function is invertible if it fulfils two criteria
+\begin{itemize}
+\item The function is \textbf{\textit{onto}},
+\item The function is \textbf{\textit{one-to-one}}.
+\end{itemize}
 
+State the conditions to be satisfied by a function
+$f : X \leftarrow Y$ for it to have an inverse function
+$f^{-1} : Y \leftarrow X$.
 %---------------------------------------------------------%
 
+$\lceil \frac{x^2+1}{4} \rceil$
+where $f : A \rightarrow \textbf{Z}$
+\begin{itemize}
+\item[(i)] Find $f(4)$ and the ancestors of 3.
+\item[(ii)] Find the range of $f$.
+\item[(iii)] Is f invertible? Justify your answer
+\end{itemize}
+
+Given $f : \textbf{R} \rightarrow \textbf{R}$ where f(x) =3x-1,define fully
+the inverse of the function f ,i.e.$f^{-1}$. 
+State the value of $f^{-1}(2)$
 \section*{Question 4}
 
 
@@ -2388,10 +2302,29 @@ not have the "onto" property, giving a specific counter example in each case.
 
 \section{Section 4 Functions}
 
+\subsection{Invertible Functions}
+A function is invertible if it fulfils two criteria
+\begin{itemize}
+\item The function is \textbf{\textit{onto}},
+\item The function is \textbf{\textit{one-to-one}}.
+\end{itemize}
 
+State the conditions to be satisfied by a function
+$f : X \leftarrow Y$ for it to have an inverse function
+$f^{-1} : Y \leftarrow X$.
 %---------------------------------------------------------%
 
+$\lceil \frac{x^2+1}{4} \rceil$
+where $f : A \rightarrow \textbf{Z}$
+\begin{itemize}
+\item[(i)] Find $f(4)$ and the ancestors of 3.
+\item[(ii)] Find the range of $f$.
+\item[(iii)] Is f invertible? Justify your answer
+\end{itemize}
 
+Given $f : \textbf{R} \rightarrow \textbf{R}$ where f(x) =3x-1,define fully
+the inverse of the function f ,i.e.$f^{-1}$. 
+State the value of $f^{-1}(2)$
 
 \section*{Functions}
 \begin{itemize}
@@ -2404,6 +2337,18 @@ not have the "onto" property, giving a specific counter example in each case.
 \item onto (bijective)
 \end{itemize}
 %------------------------------------------------%
+
+
+\section*{Functions}
+\begin{itemize}
+\item Domain of a Function
+\item Range of a function
+\item Inverse of a function
+\end{itemize}
+\begin{itemize}
+\item one-one (surjective)
+\item onto (bijective)
+\end{itemize}
 
 
 
